// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  width: 100%;
  background-color: #e2e2e2;
  color: #ffffff;
  border-style: solid;
  border-width: 2px;
  border-radius: 10px;
  box-sizing: border-box;
  font-family: 'Lato',sans-serif;
  font-weight: 600;
  text-transform: uppercase;
  text-align: center;
  padding: 11px 30px;
  outline: none;
  font-size: 15px;
  line-height: 1;
  cursor: pointer;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c0:hover {
  background-color: #e2e2e2;
  border-color: #e2e2e2;
  color: white;
}

.c0:active {
  background-color: #e2e2e2;
  border-color: #e2e2e2;
  color: white;
}

<Button
  className="c0"
  loading={true}
  onClick={[Function]}
  width="100%"
>
  SIGN UP
</Button>
`;

exports[`renders purple button 1`] = `
.c0 {
  cursor: pointer;
  width: auto;
  background-color: #6C5FC7;
  color: #ffffff;
  border-color: #6C5FC7;
  border-style: solid;
  border-width: 2px;
  border-radius: 10px;
  box-sizing: border-box;
  font-family: 'Lato',sans-serif;
  font-weight: 600;
  text-transform: uppercase;
  text-align: center;
  padding: 11px 30px;
  outline: none;
  font-size: 15px;
  line-height: 1;
  cursor: pointer;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c0:hover {
  background-color: #5346AE;
  border-color: #5346AE;
  color: white;
}

.c0:active {
  background-color: #42378a;
  border-color: #42378a;
  color: white;
}

<Button
  className="c0"
  purple={true}
>
  PURPLE
</Button>
`;
